--- a/wp-content/themes/sixgill/less/desktop_home.less
+++ b/wp-content/themes/sixgill/less/desktop_home.less
@@ -66,7 +66,6 @@
 		}
 
 		&-text {
-			letter-spacing: 1.6px;
 			&, & p {
 				z-index: 2;
 				font-size: 32px;
